Mosquitto 1.4.9, Installer Report, Warn on Error

--- a/home-assistant.service
+++ b/home-assistant.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=hass
-ExecStart=/srv/hass/hass_venv/bin/hass -c /home/hass/
+ExecStart=/srv/hass/hass_venv/bin/hass -c /home/hass/.homeassistant
 
 [Install]
 WantedBy=multi-user.target
