--- a/home-assistant_novenv.service
+++ b/home-assistant_novenv.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=hass
-ExecStart=/usr/bin/hass -c /home/hass/
+ExecStart=/usr/bin/hass -c /home/hass/.homeassistant
 
 [Install]
 WantedBy=multi-user.target
