--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -32,7 +32,7 @@
 # This should be set to /var/run/mosquitto.pid if mosquitto is
 # being run automatically on boot with an init script and 
 # start-stop-daemon or similar.
-#pid_file
+pid_file /var/run/mosquitto.pid
 
 # When run as root, drop privileges to this user and its primary 
 # group.
@@ -40,7 +40,7 @@
 # If run as a non-root user, this setting has no effect.
 # Note that on Windows this has no effect and so mosquitto should 
 # be started by the user you wish it to run as.
-#user mosquitto
+user mosquitto
 
 # The maximum number of QoS 1 and 2 messages currently inflight per 
 # client.
@@ -130,7 +130,6 @@
 # given, the default listener will not be bound to a specific 
 # address and so will be accessible to all network interfaces.
 # bind_address ip-address/host name
-#bind_address
 
 # Port to use for the default listener.
 #port 1883
@@ -423,17 +422,17 @@ protocol websockets
 # subscriptions, currently in-flight messages and retained 
 # messages.
 # retained_persistence is a synonym for this option.
-#persistence false
+persistence true
 
 # The filename to use for the persistent database, not including 
 # the path.
-#persistence_file mosquitto.db
+persistence_file mosquitto.db
 
 # Location for persistent database. Must include trailing /
 # Default is an empty string (current directory).
 # Set to e.g. /var/lib/mosquitto/ if running as a proper service on Linux or
 # similar.
-#persistence_location
+persistence_location /var/lib/mosquitto/
 
 # =================================================================
 # Logging
@@ -511,7 +510,7 @@ protocol websockets
 # false then a password file should be created (see the 
 # password_file option) to control authenticated client access. 
 # Defaults to true.
-#allow_anonymous true
+allow_anonymous false
 
 # In addition to the clientid_prefixes, allow_anonymous and TLS 
 # authentication options, username based authentication is also 
@@ -537,7 +536,7 @@ protocol websockets
 # 
 # See the TLS client require_certificate and use_identity_as_username options
 # for alternative authentication options.
-#password_file
+#password_file password_file /etc/mosquitto/pwfile
 
 # Access may also be controlled using a pre-shared-key file. This requires
 # TLS-PSK support and a listener configured to use it. The file should be text
