fixed typo - password_file

--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -536,7 +536,7 @@ allow_anonymous false
 # 
 # See the TLS client require_certificate and use_identity_as_username options
 # for alternative authentication options.
-#password_file password_file /etc/mosquitto/pwfile
+password_file /etc/mosquitto/pwfile
 
 # Access may also be controlled using a pre-shared-key file. This requires
 # TLS-PSK support and a listener configured to use it. The file should be text
