--- a/mosquitto.service
+++ b/mosquitto.service
@@ -9,7 +9,7 @@ Type=forking
 RemainAfterExit=no
 StartLimitInterval=0
 PIDFile=/var/run/mosquitto.pid
-ExecStart=/usr/local/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf
+ExecStart=/usr/local/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf -d
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 RestartSec=2
